test/functional/failtests/classes/constructorTypeMismatch.txt
TypeError: Got float, but expected int for parameter 1 of constructor for Point
9  | func main() {
10 |     var foo = new Point(1.0, 2.0); # float float
   |                              ^ (10:30)
11 | }

